--- a/EqualityComparers/EqualityComparers.csproj
+++ b/EqualityComparers/EqualityComparers.csproj
@@ -4,6 +4,7 @@
     <TargetFramework>netstandard2.0</TargetFramework>
     <Authors>Ben Taylor</Authors>
     <Company />
+    <Version>1.0.1</Version>
   </PropertyGroup>
 
 </Project>
